# microkit

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/workflows/: publish.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  new.rs  setup.rs
crates/microkit/: Cargo.toml  README.md
crates/microkit-cli/: Cargo.toml  README.md
crates/microkit-cli/src/: database.rs  main.rs  new.rs  run.rs  setup.rs
crates/microkit-macros/: Cargo.toml  README.md
crates/microkit-macros/src/: lib.rs
crates/microkit/src/: auth.rs  config.rs  dapr.rs  database.rs  documentors.rs  entity.rs  health.rs  lib.rs  network.rs  otel.rs  prelude.rs  router.rs
template/: .dockerignore  .gitignore  Cargo.toml  Cargo.toml-disabled  GitVersion.yml  README.md  config.yml  dapr.yaml  docker-compose.yml  flake.nix  microkit.yml
template/.cargo/: config.toml
template/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
template/.direnv/flake-inputs/: 87lxhc85xz00958gz21lc5ff5iwih1jp-source
template/TestService/: Cargo.toml  GitVersion.yml  README.md  config.yml  dapr.yaml  docker-compose.yml
template/TestService/.cargo/: config.toml
template/TestService/crates/api/src/: main.rs
template/TestService/crates/entities/: Cargo.toml
template/TestService/crates/migrations/src/: lib.rs
template/TestService/dapr/: deadletterqueue.yaml  pubsub.yaml  secrets.yaml
template/crates/api/: Cargo.toml  Dockerfile
template/crates/api/src/: lib.rs  main.rs
template/crates/api/src/endpoints/: events_users.rs  mod.rs  users.rs  users_api.rs  users_consumer.rs
template/crates/api/src/endpoints/api/: users.rs
template/crates/api/src/endpoints/consumer/: users.rs
template/crates/contracts/: Cargo.toml
template/crates/contracts/src/: lib.rs
template/crates/entities/: Cargo.toml
template/crates/entities/src/: users.rs
template/crates/migrations/: Cargo.toml
template/crates/migrations/src/: m20220101_000001_add_users_table.rs
template/crates/website/: Cargo.toml  Dioxus.toml
template/crates/website/assets/: main.css  tailwind.css
template/crates/website/src/: main.rs
template/dapr/: resiliency.yaml  subscription-users.yaml
