[workspace]
resolver = "3"
members = ["crates/*", "template/crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
repository = "https://github.com/mbwilding/microkit"
edition = "2024"
license-file = "LICENSE"
keywords = ["microservice"]

[workspace.dependencies]
# Internal
microkit = { path = "crates/microkit" }
microkit-macros = { path = "crates/microkit-macros" }
entities = { path = "template/crates/entities" }
migrations = { path = "template/crates/migrations" }
api = { path = "template/crates/api" }
# External
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
sea-orm = { version = "2.0.0-rc.31", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = { version = "0.2" }
