[workspace]
resolver = "3"
members = ["crates/*", "template/crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
repository = "https://github.com/mbwilding/microkit"
edition = "2024"
license-file = "LICENSE"
keywords = ["microservice"]

[workspace.dependencies]
# Internal
api = { path = "template/crates/api" }
contracts = { path = "template/crates/contracts" }
entities = { path = "template/crates/entities" }
microkit = { path = "crates/microkit" }
microkit-macros = { path = "crates/microkit-macros" }
migrations = { path = "template/crates/migrations" }
# External
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "2.0.0-rc.31", features = [ "debug-print", "runtime-tokio-native-tls", "sqlx-postgres", ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2" }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"
