[package]
name = "microkit-cli"
description = "MicroKit CLI tool for managing your services"
publish = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "mk"
path = "src/main.rs" # or wherever your main file is

[dependencies]
# Internal
microkit = { workspace = true }
# Workspace External
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
# External
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
toml_edit = "0.24"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
zip = { version = "7.4", default-features = false, features = ["deflate"] }
# Posix
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
# Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Console"] }
