[package]
name = "api"
version = "0.1.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
edition = "2024"
publish = false

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
# Kit
microkit = { path = "../../../crates/microkit" }
# Internal
entities = { workspace = true }
migrations = { workspace = true }
# Workspace External
anyhow = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
# External
tracing = "0.1"
