[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# MicroKit
microkit = { workspace = true }
# Internal
entities = { workspace = true }
migrations = { workspace = true }
# Workspace External
anyhow = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
