[package]
name = "entities"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
# Internal
microkit = { workspace = true }
contracts = { workspace = true }
# External
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
