[package]
name = "website"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Internal
api = { workspace = true }
# External
dioxus = { version = "0.7.1", features = ["router"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
