[package]
name = "website"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Internal
api = { workspace = true }
# External
base64 = "0.22"
dioxus = { version = "0.7.1", features = ["router"] }
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "io-util"] }
url = "2.5"
webbrowser = "1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
